src/testData/analysis/dupEnumEntries.cr
enum X
  <error descr="Duplicated enum constant name: X">X</error>
  Y
  <error descr="Duplicated enum constant name: X">X</error>
end